--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,8 @@
-body {
+
+*, *::before, *::after {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +10,100 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  background-color: brown;
+  height: 4rem;
+}
+
+.nav-title{
+  padding: 1rem;
+}
+
+.nav-itemtitle{
+  text-decoration: none;
+  color:black;
+  margin-left: 2rem;
+}
+
+.nav-list{
+  display: flex;
+  padding: 0.1rem 1rem;
+  justify-content: space-between;
+}
+.nav-items{
+  list-style-type: none;
+  padding: 1rem;
+}
+
+.nav-item{
+  padding:1rem;
+  text-decoration: none;
+  color: black
+}
+
+.content{
+  display: flex;
+  background-color: snow;
+  height: 35rem;
+}
+.side-content{
+  margin: 2.5rem 2rem;
+  flex: 0 1 6rem;
+}
+.side-title{
+  
+  margin-left: 1rem;
+}
+.side-list{
+  margin: 1rem 0.1rem;
+  list-style-type: none;
+}
+.side-item{
+  padding: 1rem;
+}
+
+.main-content{
+    flex: 1;
+    padding: 2rem 1rem;
+}
+.product{
+  width: 75rem;
+}
+.product-title{
+  margin-left: 30rem;
+  margin-top: 1rem;
+}
+
+.product-edit{
+  margin: 1rem 20rem;
+  padding: 1rem;
+  border: 0.1rem solid black;
+  border-radius: 1rem;
+  text-shadow: 5rem;
+
+}
+.product-label{
+  padding: 1rem 0.5rem;
+  
+}
+.product-input{
+  display: flex;
+  border: 0.1rem solid black;
+  border-radius: 0.5rem;
+  padding: 1rem;
+}
+
+.footer{
+  height: 6rem;
+  display: flex;
+  background-color: bisque;
+  justify-content: center;
 }
