--- a/src/index.css
+++ b/src/index.css
@@ -76,22 +76,28 @@ code {
 }
 .product{
   width: 75rem;
+  
 }
+
 .product-title{
   margin-left: 30rem;
   margin-top: 1rem;
 }
 
 .product-edit{
-  margin: 1rem 20rem;
+  margin: 1rem 5rem;
   padding: 1rem;
-  border: 0.1rem solid black;
+  border: 0.01rem solid black;
   border-radius: 1rem;
-  text-shadow: 5rem;
+  width: 60rem;
 
+}
+.product-edititle{
+  margin: 0 20rem;
 }
 .product-label{
   padding: 1rem 0.5rem;
+  margin: 0 20rem;
   
 }
 .product-input{
@@ -99,6 +105,10 @@ code {
   border: 0.1rem solid black;
   border-radius: 0.5rem;
   padding: 1rem;
+  margin: 0 20rem;
+}
+.btn-sbmt{
+  margin: 2rem 28rem;
 }
 
 .footer{
