--- a/src/index.css
+++ b/src/index.css
@@ -56,27 +56,34 @@ code {
 }
 .side-content{
   margin: 2.5rem 2rem;
-  flex: 0 1 17rem;
+  flex: 0 1 15rem;
 }
 .side-title{
-  
-  margin-left: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 3rem;
 }
 .side-list{
-  margin: 1rem 0.1rem;
+  margin: 0.2rem;
   list-style-type: none;
 }
 .side-item{
-  padding: 1rem;
-  margin: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 0.5rem;
   
 }
 .side-link{
   text-decoration: none;
+  
   color: black;
-  border: 0.01rem solid rgb(49, 44, 40); 
+  border: 0.01rem solid rgb(49, 44, 40);
+  background-color: sandybrown;
   padding: 1rem;
   border-radius: 2rem;
+  box-shadow: 0.1rem 0.1rem;
   
 }
 
@@ -97,6 +104,7 @@ code {
 }
 
 .product-edit{
+  box-shadow: 0.2rem 0.2rem 0.2rem 0.2rem;
   margin: 1rem 5rem;
   padding: 1rem;
   border: 0.01rem solid black;
@@ -134,6 +142,7 @@ code {
   text-shadow: 2rem;
   padding: 1rem;
   margin: 1rem;
+  box-shadow: 0.1rem 0.1rem black;
 }
 
 .footer{
@@ -141,4 +150,34 @@ code {
   display: flex;
   background-color: bisque;
   justify-content: center;
+}
+
+@media only screen and (max-width:800px) {
+  .side-content{
+    flex: 0 1 30rem;
+  }
+  .inputs{
+      margin-bottom: -0.7rem;
+      margin-top: -0.7rem;
+  }
+}
+
+@media only screen and (max-width:600px) {
+  .side-content{
+    flex: 0 1 30rem;
+  }
+  .inputs{
+      margin-bottom: -0.7rem;
+      margin-top: -0.7rem;
+  }
+}
+@media only screen and (max-width: 400px){
+  .side-content{
+    flex: 0 1 3rem;
+  }
+  .inputs{
+      margin-bottom: -0.6rem;
+      margin-top: -0.6rem;
+  }
+  
 }
